--- a/static/mycss/mycss.css
+++ b/static/mycss/mycss.css
@@ -23,11 +23,13 @@ html {
 
 /* my_footerを使う場合、本体をmargin-bottomでfooterエリアを確保しなければならない。 */
 main {
-    font-family:'Helvetica Neue',Arial,'Hiragino Sans',"BIZ UDPGothic",'Meiryo',sans-serif;
-    /* font-family: "ヒラギノ角ゴシック W4","Hiragino Sans",'Noto Sans JP',meiryo,sans-serif; */
-    /* font-family: 'Noto Sans JP','ヒラギノ角ゴ Pro W4',sans-serif; */
-    /* font-family: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W4', Meiryo, メイリオ, '游ゴシック Medium', 'Yu Gothic Medium', '游ゴシック体', 'Yu Gothic', YuGothic, Osaka, arial, sans-serif; */
-    margin-bottom: 40px;
+    font-family: -apple-system, BlinkMacSystemFont,
+                   "Segoe UI", Roboto, "Helvetica Neue",
+                   "Hiragino Kaku Gothic ProN", "Hiragino Sans",
+                   "Noto Sans JP", "Yu Gothic", "Meiryo", sans-serif;
+ 
+    /* font-family:'Helvetica Neue',Arial,'Hiragino Sans',"BIZ UDPGothic",'Meiryo',sans-serif; */
+    margin-bottom: 40px; 
 }
 /* footerだとBulmaのfooterを上書きしてしまう */
 .my_footer {
