公開情報の項目に「タイトル」を追加

--- a/overview/templates/overview/pubinfo/pub_info.html
+++ b/overview/templates/overview/pubinfo/pub_info.html
@@ -34,7 +34,7 @@
       <header class="card-header">
         <p class="card-header-title has-background-grey-dark has-text-white">
         {% comment %} <p class="card-header-title has-background-white has-text-black"> {% endcomment %}
-          {{item.year}}年度公開情報
+          {{item.year}}年度 {{item.title}}
         </p>
       </header>
       <div class="card-content markdown table is-bordered is-narrow">
