--- a/overview/templates/overview/pubinfo/pub_info_list.html
+++ b/overview/templates/overview/pubinfo/pub_info_list.html
@@ -40,7 +40,7 @@
     <thead>
       <tr>
         <th class="has-text-centered">西暦</th>
-        <th class="has-text-centered">概要</th>
+        <th class="has-text-centered">title</th>
         <th class="has-text-centered">表示</th>
         <th class="has-text-centered">#</th>
       </tr>
@@ -49,7 +49,7 @@
       {% for info in object_list %}
       <tr>
         <td class="has-text-right">{{info.year}} </td>
-        <td class="has-text-left">{{info.pub_information|markdown_to_html|truncatechars:10}} </td>
+        <td class="has-text-left">{{info.title}} </td>
         <td class="has-text-left">{{info.is_published}} </td>
         <td class="has-text-left nowrap">
           <a href="{% url 'overview:pub_update' info.pk %}" class="button is-primary is-small">修正</a>
