メニューの見直し

--- a/notice/templates/notice/news_card_mobile.html
+++ b/notice/templates/notice/news_card_mobile.html
@@ -11,8 +11,8 @@
 {% block navbar %}
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{% url 'register:menu' %}">メニュー</a>
-    <a class="navbar-item" href="{% url 'overview:overview' %}">マンション公開情報</a>
+    <a class="navbar-item" href="{% url 'register:menu' %}">組合員メニュー</a>
+    <a class="navbar-item" href="{% url 'overview:overview' %}">公開メニュー</a>
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
