--- a/overview/templates/overview/overview/overview_mobile.html
+++ b/overview/templates/overview/overview/overview_mobile.html
@@ -12,6 +12,7 @@
   <div class="navbar-brand">
     <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
     <a class="navbar-item" href="{% url 'overview:roomtype_list' %}">管理費等</a>
+    <a class="navbar-item" href="{% url 'overview:pubinfo' %}">公開情報</a>
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
