--- a/register/templates/register/menu_mobile.html
+++ b/register/templates/register/menu_mobile.html
@@ -26,7 +26,7 @@
     <div class="columns">
       <div class="column">
         <div class="menubox has-text-centered">
-          <a href="{% url 'overview:overview' %}" class="white_color">マンション公開情報</a>
+          <a href="{% url 'overview:overview' %}" class="white_color">公開情報</a>
         </div>
       </div>
       <div class="column">
