--- a/overview/templates/overview/pubinfo/pub_info_form.html
+++ b/overview/templates/overview/pubinfo/pub_info_form.html
@@ -30,10 +30,18 @@
     {% for field in form %}
       <div class='field'>
         <div class='control'>
-          <div class='label'>{{ field.label_tag }}</div>
-          <div class='my_field'>{{ field }}</div>
+          {% if field.field.widget.input_type == "checkbox" %}
+            <!-- ✅ チェックボックス専用（Bulma構文） -->
+            <label class="checkbox">
+              {{ field }} {{ field.label }}
+            </label>
+          {% else %}
+            <!-- ✅ 通常のinputやtextなど -->
+            <label class="label">{{ field.label }}</label>
+            <div class="my_field">{{ field }}</div>
+          {% endif %}
           {% if field.help_text %}
-            <span class='helptext'>{{ field.help_text }}</span>
+            <p class="help is-size-6">{{ field.help_text|safe }}</p>
           {% endif %}
           {{ field.errors }}
         </div>
