commonアプリを追加し、templatesディレクトリをcommon以下に移動

--- a/notice/templates/notice/news_card_mobile.html
+++ b/notice/templates/notice/news_card_mobile.html
@@ -1,4 +1,4 @@
-{% extends "base_mobile.html" %}
+{% extends "common/base_mobile.html" %}
 {% load static %}
 {% load mytag %}
 
@@ -75,5 +75,5 @@
 <br>
 {% endfor %}
 </div>
-{% include 'page.html' %}
+{% include 'common/page.html' %}
 {% endblock %}
