--- a/notice/templates/notice/news_form.html
+++ b/notice/templates/notice/news_form.html
@@ -1,4 +1,4 @@
-{% extends "base_single_page.html" %}
+{% extends "common/base_single_page.html" %}
 {% block file_page %}active{% endblock %}
 {% block navbar %}
 <!-- navbar -->
