--- a/overview/templates/overview/pubinfo/pub_info_list.html
+++ b/overview/templates/overview/pubinfo/pub_info_list.html
@@ -1,4 +1,4 @@
-{% extends "base_single_page.html" %}
+{% extends "common/base_single_page.html" %}
 {% load mytag %}
 
 {% block head %}
@@ -58,6 +58,6 @@
       {% endfor %}
     </tbody>
   </table>
-  {% include 'page.html' %}
+  {% include 'common/page.html' %}
 </div>
 {% endblock %}
