--- a/register/templates/register/user/update_user_form.html
+++ b/register/templates/register/user/update_user_form.html
@@ -1,4 +1,4 @@
-{% extends "base_single_page.html" %}
+{% extends "common/base_single_page.html" %}
 {% block content %}
 <div class="container is-fluid">
   <br>
