--- a/information/templates/information/info_manage_list.html
+++ b/information/templates/information/info_manage_list.html
@@ -1,4 +1,4 @@
-{% extends "base_single_page.html" %}
+{% extends "common/base_single_page.html" %}
 
 <!-- navbar -->
 {% block navbar %}
@@ -72,6 +72,6 @@
       {% endfor %}
     </tbody>
   </table>
-  {% include 'page.html' %}
+  {% include 'common/page.html' %}
 </div>
 {% endblock %}
