staticファイルをcommonアプリにまとめた

--- a/common/templates/common/base.html
+++ b/common/templates/common/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html class="has-navbar-fixed-top" lang="ja">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +9,7 @@
   <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}/static/apple-touch-icon-precomposed.png">
   {# css #}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
-  <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
+  <link href="{% static 'common/mycss/mycss.css' %}" rel="stylesheet">
 
   <title>
   {% block title %}
