--- a/common/templates/common/base_mobile.html
+++ b/common/templates/common/base_mobile.html
@@ -18,7 +18,7 @@
   {# css #}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
   {% comment %} <link href="{% static 'bulma.min.css' %}" rel="stylesheet"> {% endcomment %}
-  <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
+  <link href="{% static 'common/mycss/mycss.css' %}" rel="stylesheet">
   {% comment %}
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
