--- a/information/templates/information/weasyprint.html
+++ b/information/templates/information/weasyprint.html
@@ -3,7 +3,7 @@
 
 {% block head %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
-  <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
+  <link href="{% static 'common/mycss/mycss.css' %}" rel="stylesheet">
   <link href="{% static 'mycss/my_markdown.css' %}" rel="stylesheet">
   <link href="{% static 'information/weasyprint.css' %}" rel="stylesheet">
 {% endblock head%}
