qr_code.pngの読み込みをcommon/qr_code.pngに修正

--- a/common/templates/common/base.html
+++ b/common/templates/common/base.html
@@ -63,7 +63,7 @@
           </form>
           <br>
           <p>
-            <img src="{% static 'qr_code.png' %}" alt="URL" width="96" height="96">
+            <img src="{% static 'common/qr_code.png' %}" alt="URL" width="96" height="96">
           </p>
         </div>
       </div>
