cssファイルの読み込みエラーを修正

--- a/common/templates/common/base_mobile.html
+++ b/common/templates/common/base_mobile.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico" />
+  <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/common/favicon.ico" />
   <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}/static/apple-touch-icon-precomposed.png">
-
   <style>
     .custom_container {
       padding: 6px;
@@ -76,7 +75,7 @@
         </form>
         <br>
         <p>
-          <img src="{% static 'qr_code.png' %}" alt="URL" width="96" height="96">
+          <img src="{% static 'common/qr_code.png' %}" alt="URL" width="96" height="96">
         </p>
       </div>
     </div>
