--- a/information/templates/information/pc_information.html
+++ b/information/templates/information/pc_information.html
@@ -3,7 +3,7 @@
 {% load mytag %}
 
 {% block head %}
-  <link href="{% static 'mycss/my_markdown.css' %}" rel="stylesheet">
+  <link href="{% static 'common/mycss/my_markdown.css' %}" rel="stylesheet">
 {% endblock head%}
 
 <!-- navbar -->
