--- a/notice/templates/notice/news_card_mobile.html
+++ b/notice/templates/notice/news_card_mobile.html
@@ -3,8 +3,8 @@
 {% load mytag %}
 
 {% block head %}
-  <link href="{% static 'mycss/my_markdown.css' %}" rel="stylesheet">
-  <link href="{% static 'mycss/mobile.css' %}" rel="stylesheet">
+  <link href="{% static 'common/mycss/my_markdown.css' %}" rel="stylesheet">
+  <link href="{% static 'common/mycss/mobile.css' %}" rel="stylesheet">
 {% endblock head %}
 
 <!-- navbar -->
