--- a/notice/templates/notice/news_card_pc.html
+++ b/notice/templates/notice/news_card_pc.html
@@ -3,7 +3,7 @@
 {% load mytag %}
 
 {% block head %}
-  <link href="{% static 'mycss/my_markdown.css' %}" rel="stylesheet">
+  <link href="{% static 'common/mycss/my_markdown.css' %}" rel="stylesheet">
 {% endblock head%}
 
 <!-- navbar -->
