公開情報ページ関係の修正

--- a/overview/templates/overview/overview/overview_pc.html
+++ b/overview/templates/overview/overview/overview_pc.html
@@ -21,7 +21,7 @@
     <div class="navbar-start">
       <a class="navbar-item" href="{% url 'overview:roomtype_list' %}">管理費等</a>
       <a class="navbar-item" href="{% url 'overview:pubinfo' %}">公開情報</a>
-      <a href="{% static 'pamphlet.pdf' %}" target="_blank" class="white_color navbar-item">パンフレット</a>
+      <a href="{% static 'common/pamphlet.pdf' %}" target="_blank" class="white_color navbar-item">パンフレット</a>
     </div>
     <div class="navbar-end">
       {% if perms.library.add_file %}
