--- a/overview/templates/overview/pubinfo/pub_info.html
+++ b/overview/templates/overview/pubinfo/pub_info.html
@@ -8,7 +8,7 @@
 {% block navbar %}
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="{% url 'notice:news_card' %}">ホーム</a>
+    <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
@@ -19,7 +19,7 @@
     <div class="navbar-start">
     </div>
     <div class="navbar-end">
-      <a href="{% url 'notice:news_card' %}" class="navbar-item">戻る</a>
+      <a href="{% url 'overview:overview' %}" class="navbar-item">戻る</a>
     </div>
   </div>
 </nav>
